feat - переработан класс и интерфейс истории просмотров